--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
     "nodemon": "^3.1.4",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   }
 }
