--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
     "nodemon": "^3.1.4",
+    "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.5",
     "socket.io": "^4.7.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.10",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11"
   }
