--- a/whatsgram/package.json
+++ b/whatsgram/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^1.7.7",
     "chattapp-com": "file:..",
+    "cors": "^2.8.5",
+    "lucide-react": "^0.441.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
